Referenced/Nintex DocGen/objects/DDP__c.object
<CustomObject>
    <fields>
        <fullName>Time__c</fullName>
        <label>Time</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>12AM</fullName>
                </value>
                <value>
                    <fullName>1AM</fullName>
                </value>
                <value>
                    <fullName>2AM</fullName>
                </value>
                <value>
                    <fullName>3AM</fullName>
                </value>
                <value>
                    <fullName>4AM</fullName>
                </value>
                <value>
                    <fullName>5AM</fullName>
                </value>
                <value>
                    <fullName>6AM</fullName>
                </value>
                <value>
                    <fullName>7AM</fullName>
                </value>
                <value>
                    <fullName>8AM</fullName>
                </value>
                <value>
                    <fullName>9AM</fullName>
                </value>
                <value>
                    <fullName>10AM</fullName>
                </value>
                <value>
                    <fullName>11AM</fullName>
                </value>
                <value>
                    <fullName>12PM</fullName>
                </value>
                <value>
                    <fullName>1PM</fullName>
                </value>
                <value>
                    <fullName>2PM</fullName>
                </value>
                <value>
                    <fullName>3PM</fullName>
                </value>
                <value>
                    <fullName>4PM</fullName>
                </value>
                <value>
                    <fullName>5PM</fullName>
                </value>
                <value>
                    <fullName>6PM</fullName>
                </value>
                <value>
                    <fullName>7PM</fullName>
                </value>
                <value>
                    <fullName>8PM</fullName>
                </value>
                <value>
                    <fullName>9PM</fullName>
                </value>
                <value>
                    <fullName>10PM</fullName>
                </value>
                <value>
                    <fullName>11PM</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Quote</fullName>
                </value>
                <value>
                    <fullName>Proposal</fullName>
                </value>
                <value>
                    <fullName>Contract</fullName>
                </value>
                <value>
                    <fullName>Service Agreement</fullName>
                </value>
                <value>
                    <fullName>Legal Agreement</fullName>
                </value>
                <value>
                    <fullName>Letter</fullName>
                </value>
                <value>
                    <fullName>Account Plan Summary</fullName>
                </value>
                <value>
                    <fullName>Invoice</fullName>
                </value>
                <value>
                    <fullName>Reporting</fullName>
                </value>
                <value>
                    <fullName>Product Information</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>WorkspaceId__c</fullName>
        <label>WorkspaceId</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>WorkspaceName__c</fullName>
        <label>WorkspaceName</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Document Package</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>RECORDTYPE</columns>
        <columns>Output_Filename__c</columns>
        <columns>Description__c</columns>
        <columns>Filter__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Drawloop Document Packages</pluralLabel>
    <recordTypes>
        <fullName>API</fullName>
        <active>false</active>
        <label>API</label>
    </recordTypes>
    <recordTypes>
        <fullName>Account</fullName>
        <active>true</active>
        <description>Document Package will be available from an Account only</description>
        <label>Account</label>
    </recordTypes>
    <recordTypes>
        <fullName>Case</fullName>
        <active>true</active>
        <description>Document Package will be available from a Case only</description>
        <label>Case</label>
    </recordTypes>
    <recordTypes>
        <fullName>Contact</fullName>
        <active>true</active>
        <description>Document Package will be available from a Contact only</description>
        <label>Contact</label>
    </recordTypes>
    <recordTypes>
        <fullName>Contract</fullName>
        <active>true</active>
        <description>Document Package will be available from a Contract only</description>
        <label>Contract</label>
    </recordTypes>
    <recordTypes>
        <fullName>Custom_Object</fullName>
        <active>true</active>
        <description>Document Package will be available from a custom object only</description>
        <label>Custom Object</label>
    </recordTypes>
    <recordTypes>
        <fullName>Form</fullName>
        <active>true</active>
        <description>Document Package will be available as a form</description>
        <label>Form</label>
    </recordTypes>
    <recordTypes>
        <fullName>Lead</fullName>
        <active>true</active>
        <description>Document Package will be available from a Lead only</description>
        <label>Lead</label>
    </recordTypes>
    <recordTypes>
        <fullName>Nintex_Form</fullName>
        <active>true</active>
        <description>Document Package will be available only for Nintex Forms</description>
        <label>Nintex Form</label>
    </recordTypes>
    <recordTypes>
        <fullName>Opportunity</fullName>
        <active>true</active>
        <description>Document Package will be available from an Opportunity only</description>
        <label>Opportunity</label>
    </recordTypes>
    <recordTypes>
        <fullName>Quote</fullName>
        <active>true</active>
        <description>Document Package will be available from a Quote only</description>
        <label>Quote</label>
    </recordTypes>
    <recordTypes>
        <fullName>Report</fullName>
        <active>true</active>
        <description>Document Package will be available as an automated email only</description>
        <label>Report</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>